# image_proc

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cuda/: CMakeLists.txt  README.md  main.cpp
cuda/include/: blur.h  grayscale.h  hello_world.h
cuda/source/: blur.cu  grayscale.cu  hello_world.cu
